--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -1,3 +1,32 @@
 .header {
-	background: red;
+	background: var(--color-white);
+}
+
+.wrapper {}
+
+.logo {
+	align-items: center;
+	color: var(--color-text-dark);
+	display: flex;
+	gap: 8px;
+
+	div {
+		--size: 24px;
+		height: var(--size);
+		position: relative;
+		width: var(--size);
+
+		svg {
+			--size: 100%;
+			height: var(--size);
+			position: absolute;
+			stroke: var(--color-primary-3);
+			width: var(--size);
+		}
+	}
+
+	strong {
+		font-weight: bold;
+		font-size: 18px;
+	}
 }
