add twitter color and x component to "join our community" section

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,7 @@ body {
     --kickstarter-600: 154 100% 37%;
     --discord-500: 235 86% 65%;
     --discord-600: 240 77% 59%;
+    --x-500: 197 100% 47%;
   }
 
   .dark {
