remove useless globals.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,11 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-    --kickstarter: 154 95% 41%;
+    --kickstarter-500: 154 95% 41%;
+    --kickstarter-600: 154 100% 37%;
+    --discord-500: 235 86% 65%;
+    --discord-600: 240 77% 59%;
+    --x-500: 197 100% 47%;
   }
 
   .dark {
