--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,18 @@
 @tailwind utilities;
 
 body {
+  /* default fonts before loading */
   font-family: Arial, Helvetica, sans-serif;
+
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: var(--font-primary);
+  }
 }
 
 @layer utilities {
