--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-  /* default fonts before loading */
   font-family: Arial, Helvetica, sans-serif;
 
   h1,
@@ -18,6 +17,11 @@ body {
   svg {
     height: 100%;
     width: 100%;
+  }
+
+  *:focus,
+  *:focus-visible {
+    @outline outline-yellow-500;
   }
 }
 
