--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,29 +55,40 @@ body {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
+
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
+
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
+
     --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
+
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
+
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
+
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
+
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
+
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
     --radius: 0.5rem;
+
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
@@ -86,23 +97,41 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+
     --kickstarter-500: 154 95% 41%;
     --kickstarter-600: 154 100% 37%;
+
     --discord-500: 235 86% 65%;
     --discord-600: 240 77% 59%;
+
     --x-500: 197 100% 47%;
+
     --youtube-500: 0 100% 50%;
+
     --rotate-text: 3deg;
     --rotate-icon: 6deg;
     --rotate-cta: 1deg;
+
     --header-height: 64px;
+
     --clip-path-top: polygon(0 0, 100% 0, 100% 0, 0 0);
     --clip-path-right: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
     --clip-path-bottom: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
     --clip-path-left: polygon(0 0, 0 0, 0 100%, 0% 100%);
     --clip-path-open: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+
     --width-card-client-mobile: 300px;
     --width-card-client: 450px;
+
+    --time-750: 750ms;
+    --time-1250: 1250ms;
+    --time-1500: 1500ms;
+    --time-1750: 1750ms;
+    --time-2000: 2000ms;
+    --time-2250: 2250ms;
+    --time-2500: 2500ms;
+    --time-2750: 2750ms;
+    --time-3000: 3000ms;
   }
 }
 
