add reddit and discord to specified users and add shuffle feature on client side, impossible on server side due to some "use client" restrictions for other components of the page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,6 +153,8 @@ body {
 
     --youtube-500: 0 100% 50%;
 
+    --reddit-500: 16 100% 50%;
+
     --rotate-text: 3deg;
     --rotate-icon: 6deg;
     --rotate-cta: 1deg;
